Prevent line wrapping inside :hwlabel: role

--- a/source/_static/css/mixxx.css
+++ b/source/_static/css/mixxx.css
@@ -174,6 +174,7 @@ a:hover {
     padding: 2.4px 6px;
     margin: auto 2px;
     text-transform: uppercase;
+    white-space: nowrap;
 }
 
 /* Allow wrapping in tables */
